# taurine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_RU.md  RELEASE_NOTES.md  RELEASE_NOTES_RU.md  bench.tau  test_oop.tau  test_stdlib.tau
.github/workflows/: ci.yaml  ci.yml
benches/: benchmark.rs
docs/: CHANGELOG.md  CHANGELOG_RU.md  EXAMPLES.md  EXAMPLES_RU.md  GUIDE.md  GUIDE_RU.md
examples/: arrays.tau  async_await_yield.tau  crypto_example.tau  date_example.tau  fibonacci.tau  hello.tau  json_example.tau  new_features.tau  regex_example.tau  simple_async.tau  test_example.tau
examples/embedding/: 01_basic_rust.rs  02_calling_functions.rs  03_rust_functions.rs  04_c_api.c  05_cpp_api.cpp  06_python.py  07_nodejs.js  README.md
installers/: INSTALL.md  INSTALL_RU.md  install.ps1  install.sh
src/: arena.rs  ast.rs  async_rt.rs  benchmark.rs  bytecode.rs  environment.rs  error.rs  ffi.rs  formatter.rs  gc.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  safety.rs  string_intern.rs  value.rs
src/interpreter/: execute.rs  mod.rs  native_functions.rs
std/: array.tau  async.tau  crypto.tau  date.tau  fs.tau  http.tau  io.tau  json.tau  math.tau  net.tau  os.tau  process.tau  regex.tau  set.tau  string.tau  table.tau  test.tau
tests/: benchmark.tau  demo.tau  integration_tests.rs  integration_v08.tau  interpreter_tests.rs  lexer_tests.rs  parser_tests.rs  run_all.tau  test_arrays.tau  test_break_continue.tau  test_comment.tau  test_const_error.tau  test_crypto.tau  test_fstring.tau  test_func_in_table.tau  test_import.tau  test_imports.tau  test_json.tau  test_json_tables.tau  test_let_const.tau  test_min.tau  test_minimal.tau  test_module.tau  test_multi_return.tau  test_range.tau  test_regex_simple.tau  test_v04.tau  test_v06.tau  test_v06_full.tau  test_v06_simple.tau  test_v08.tau
