[package]
name = "taurine"
version = "1.0.0"
edition = "2024"
authors = ["ffsonDev"]
description = "Fast, embeddable scripting language implemented in Rust"
license = "MIT"
repository = "https://github.com/ffsonDev/taurine"
keywords = ["language", "scripting", "interpreter", "lua", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
logos = "0.14"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.10"
chrono = "0.4"
md5 = "0.7"
sha2 = "0.10"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/taurine-{ target }{ archive-suffix }"
bin-dir = "taurine{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
bin-dir = "taurine.exe"